==> kordets/ExpressLRS/src/src/stm32_hal/stm32f7xx.cpp <==
#include "Arduino.h"
#include "stm32_def.h"
#include "priorities.h"
#include <stm32f7xx_ll_dma.h>

uint32_t dma_channel_get(uint32_t periph, uint8_t type, uint8_t index)
{
    // Return stream instead
    /* DMA2 */
    if (periph == USART1_BASE)
        return (type == DMA_USART_RX) ? LL_DMA_STREAM_2 : LL_DMA_STREAM_7;
    else if (periph == USART6_BASE)
        return (type == DMA_USART_RX) ? LL_DMA_STREAM_1 : LL_DMA_STREAM_6;
    /* DMA1 */
    else if (periph == USART2_BASE)
        return (type == DMA_USART_RX) ? LL_DMA_STREAM_5 : LL_DMA_STREAM_6;
    else if (periph == USART3_BASE)
        return (type == DMA_USART_RX) ? LL_DMA_STREAM_1 : LL_DMA_STREAM_3;
    else if (periph == UART4_BASE)
        return (type == DMA_USART_RX) ? LL_DMA_STREAM_2 : LL_DMA_STREAM_4;
    return 0xff;
}

uint32_t dma_irq_get(uint32_t periph, uint8_t type, uint8_t index)
{
    /* DMA2 */
    if (periph == USART1_BASE)
        return (type == DMA_USART_RX) ? DMA2_Stream2_IRQn : DMA2_Stream7_IRQn;
    else if (periph == USART6_BASE)
        return (type == DMA_USART_RX) ? DMA2_Stream1_IRQn : DMA2_Stream6_IRQn;
    /* DMA1 */
    else if (periph == USART2_BASE)
        return (type == DMA_USART_RX) ? DMA1_Stream5_IRQn : DMA1_Stream6_IRQn;
    else if (periph == USART3_BASE)
        return (type == DMA_USART_RX) ? DMA1_Stream1_IRQn : DMA1_Stream3_IRQn;
    else if (periph == UART4_BASE)
        return (type == DMA_USART_RX) ? DMA1_Stream2_IRQn : DMA1_Stream4_IRQn;
    return 0xff;
}

uint32_t uart_peripheral_get(uint32_t pin)
{
    switch (pin) {
        case GPIO('A', 9):
        case GPIO('A', 10):
        case GPIO('B', 6):
        case GPIO('B', 7):
            return (uint32_t)USART1_BASE;
        case GPIO('A', 2):
        case GPIO('A', 3):
        case GPIO('A', 14):
        case GPIO('A', 15):
        case GPIO('B', 3):
        case GPIO('B', 4):
        case GPIO('D', 5):
        case GPIO('D', 6):
            return (uint32_t)USART2_BASE;
        case GPIO('B', 10):
        case GPIO('B', 11):
        case GPIO('C', 10):
        case GPIO('C', 11):
        case GPIO('D', 8):
        case GPIO('D', 9):
            return (uint32_t)USART3_BASE;
        case GPIO('A', 0):
        case GPIO('A', 1):
            return (uint32_t)UART4_BASE;
        case GPIO('C', 12):
        case GPIO('D', 2):
            return (uint32_t)UART5_BASE;
        case GPIO('C', 6):
        case GPIO('C', 7):
            return (uint32_t)USART6_BASE;
    }
    return 0;
}

void enable_pclock(uint32_t periph_base)
{
    if (is_enabled_pclock(periph_base))
        return;

    if (periph_base < APB2PERIPH_BASE) {
        uint32_t pos = (periph_base - APB1PERIPH_BASE) / 0x400;
        RCC->APB1ENR |= (1 << pos);
        RCC->APB1ENR;
    } else if (periph_base < AHB1PERIPH_BASE) {
        uint32_t pos = (periph_base - APB2PERIPH_BASE) / 0x400;
        RCC->APB2ENR |= (1 << pos);
        RCC->APB2ENR;
    } else if (periph_base < AHB2PERIPH_BASE) {
        uint32_t pos = (periph_base - AHB1PERIPH_BASE) / 0x400;
        RCC->AHB1ENR |= (1 << pos);
        RCC->AHB1ENR;
    } else  {
        uint32_t pos = (periph_base - AHB2PERIPH_BASE) / 0x400;
        RCC->AHB2ENR |= (1 << pos);
        RCC->AHB2ENR;
    }
}

uint32_t is_enabled_pclock(uint32_t periph_base)
{
    if (periph_base < APB2PERIPH_BASE) {
        uint32_t pos = (periph_base - APB1PERIPH_BASE) / 0x400;
        return RCC->APB1ENR & (1 << pos);
    } else if (periph_base < AHB1PERIPH_BASE) {
        uint32_t pos = (periph_base - APB2PERIPH_BASE) / 0x400;
        return RCC->APB2ENR & (1 << pos);
    } else if (periph_base < AHB2PERIPH_BASE) {
        uint32_t pos = (periph_base - AHB1PERIPH_BASE) / 0x400;
        return RCC->AHB1ENR & (1 << pos);
    } else {
        uint32_t pos = (periph_base - AHB2PERIPH_BASE) / 0x400;
        return RCC->AHB2ENR & (1 << pos);
    }
}

void gpio_peripheral(uint32_t gpio, uint32_t mode, int pullup)
{
    GPIO_TypeDef *regs = digital_regs[GPIO2PORT(gpio)];
    GPIO_InitTypeDef init = {0};
    if (!regs)
        return;

    // Enable GPIO clock
    gpio_clock_enable(regs);

    init.Pin = GPIO2BIT(gpio);
    init.Speed = GPIO_SPEED_FREQ_MEDIUM;
    init.Pull = (!pullup) ? GPIO_NOPULL : ((pullup < 0) ? GPIO_PULLDOWN : GPIO_PULLUP);
    if (mode == GPIO_INPUT) {
        init.Mode = GPIO_MODE_INPUT;
    } else if (mode == GPIO_OUTPUT) {
        init.Mode = GPIO_MODE_OUTPUT_PP;
    } else if (mode == (GPIO_OUTPUT | GPIO_OPEN_DRAIN)) {
        init.Mode = GPIO_MODE_OUTPUT_OD;
    } else if (mode == GPIO_ANALOG) {
        init.Mode = GPIO_MODE_ANALOG;
    } else {
        init.Alternate = (mode >> 4);
        init.Speed = GPIO_SPEED_FREQ_HIGH;
        if (mode & GPIO_OPEN_DRAIN) {
            init.Mode = GPIO_MODE_AF_OD;
        } else {
            init.Mode = GPIO_MODE_AF_PP;
        }
    }
    HAL_GPIO_Init(regs, &init);
}
